fix overflow oops

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,7 @@ img {
   justify-content: center;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
 
 .cloudContainer {
